--- a/src/data/projects/projects.json
+++ b/src/data/projects/projects.json
@@ -44,7 +44,7 @@
       "UI/UX Design",
       "Netlify"
     ],
-    "demo": "https://skakkar.netlify.app/",
+    "demo": "https://ayan-imran-portfolio.netlify.app/",
     "source": "https://github.com/AyanImran20/personal_portfolio_website.git",
     "paper": ""
   }
